--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
     "localforage": "^1.10.0",
     "pinia": "^3.0.3",
     "vue": "^3.5.18",
+    "vue-leaflet": "^0.1.0",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
+    "@vue-leaflet/vue-leaflet": "^0.10.1",
     "@vue/test-utils": "^2.4.6",
     "jsdom": "^26.1.0",
+    "leaflet": "^1.9.4",
     "prettier": "3.6.2",
     "vite": "^7.0.6",
     "vite-plugin-vue-devtools": "^8.0.0",
